src/_assets/css/report.css
h1 {
    font-weight: normal;
    font-size: 2em;
    margin-bottom: 6em;
}

h2 {
    break-before: page;
}

h3 {
    margin-top: 3em;
    color: midnightblue;
}

hr {
    border: 0;
    height: 0.125em;
    background-color: gainsboro;
    margin: 2em 0;
}

dl {}

dl dt {
    font-weight: bold;
    margin-top: .25em;
}

dl dt:not(:first-child) {
    margin-top: 1em;
    ;
}

dl dd {
    margin-left: 0;
}

body>section {
    margin: 0 0 3em;
    padding: 1em 0;
    padding: 0 2em;
}

body>section>h2:first-child {
    margin-top: 0;
}

img {
    max-width: 100%;
    max-height: 50%;
}

p code,
li code {
    font-family: "Monaco", monospace;
    margin: 0 .125em;
    color: #d5048d;
    border: 1px solid #ccc;
    padding: 0 .125em;
    display: inline-block;
}

code {
    font-size: 90%;
}

.issue {
    margin: 2em 0 3em;
}

.issue {
    counter-increment: issue-number;
    padding: 1rem;
    border: 1px solid lightgray;
}

.issue-title {
    margin: -1rem -1rem 2rem -1rem;
    padding: .75rem 1em;
    background-color: lavender;
}

.issue-title::before {
    content: attr(data-issue) " " counter(issue-number);
    display: block;
    max-width: max-content;
    padding: .25em.5em;
    font-size: 65%;
    background-color: midnightblue;
    color: white;
    border: 0;
    margin-bottom: .4em;
}

.issue-meta {
    margin: 2em -1em -1em -1em;
    background: #eee;
    padding: 0.5em 1em;
    border-radius: 0.25em;
}

.issue-meta dl {
    display: flex;
    margin: 0;
    flex-flow: wrap;
}

.issue-meta div {
    width: 45%;
    min-width: 15em;
    margin: 0 2.5% 2.5% 0;
}

.sample-list {
    padding: 0;
    margin: 0;
}

.sample-list li {
    list-style: none;
    padding: 1.5em 0;
    counter-increment: sample-list;
    display: flex;
    flex-wrap: wrap;
}

.sample-list li strong::before {
    content: counter(sample-list) ": ";
}

.sample-list li:not(:first-child) {
    border-top: 1px solid lightgrey;
}

.sample-list a {
    font-family: Monaco, monospace;
    font-size: .75em;
    text-decoration: none;
    color: gray;
    display: block;
    margin: .5em 0;
}

.sample-list img {
    margin-right: 2em;
    border: 1px solid #ccc;
    box-shadow: 0px 0px 8px -1px #ccc;
    max-width: 12em;
    max-height: 100%;
}

.sc-table dt:last-of-type,
.sc-table dd:last-of-type {
    margin-top: .5em;
}

.logo {
    max-width: 11em;
}

@media not print {
    .wcag-link {
        text-decoration: none;
        background-color: midnightblue;
        color: white;
        padding: .25em 1em;
        font-size: .75em;
        border-radius: 1em;
    }
}

.wcag-link .external {
  clip: rect(0 0 0 0);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap; 
  width: 1px;
}

/* For Prince */

@media print {

  h1 {
    string-set: doctitle content();
  }

  body {
    font-size: 10pt;
  }
  
  .issue {
    border: 0;
    padding: 0;
    break-before: page;
  }
table {
    border-collapse: collapse;
}

td,
th {
    border-bottom: 1px solid gray;
    padding: .5em 3em .5em 0;
    text-align: left;
}

th {
    font-weight: bold;
}


/* For Prince */

@media print {
    h1 {
        string-set: doctitle content();
    }
    body {
        font-size: 10pt;
    }
    .issue {
        border: 0;
        padding: 0;
        break-before: page;
    }
    .issue-meta {
        background-color: transparent;
        border-top: 2px solid gainsboro;
    }
    .issue-meta div {
        margin-bottom: 1em;
    }
    .issue img {
        max-height: 5cm;
    }
    @page {
        margin: 36pt;
        size: A4;
        @bottom-left {
            font-size: smaller;
            color: #666;
            content: string(doctitle);
        }
        @bottom-right {
            color: #666;
            font-size: smaller;
            content: counter(page) " / " counter(pages);
        }
    }
    @page: first {
        background-color: #eee;
        @bottom-left {
            content: "";
        }
        @bottom-right {
            content: "";
        }
    }
}

img,
input[type=""image""] {
    prince-pdf-tag-type: Figure;
    prince-alt-text: attr(alt);
}

figure {
    prince-pdf-tag-type: Div;
}

figcaption {
    prince-pdf-tag-type: Caption;
}

